--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <option value="4">Númenóreanos</option>
             <option value="5">Elfos</option>
         </select>
-        <p class="js-result"></p>
-        <button class="js-btn">Batalla</button>
+        <p class="js-result">Comienza la batalla</p>
+        <button class="js-button">Batalla</button>
     </form>
     <script src="./js/main.js"></script>
 </body>
