--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
             <option value="5">Elfos</option>
         </select>
         <p class="js-result">Comienza la batalla</p>
+        <h2>Puntuaciones</h2>
+        <p class="gamerScore">Juggador:</p>
+        <p class="pcScores">Computadora:</p>
         <button class="js-button">Batalla</button>
+        <button class="js-restart-button hide">Batalla</button>
     </form>
     <script src="./js/main.js"></script>
 </body>
