--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         </select>
         <p class="js-result">Comienza la batalla</p>
         <h2>Puntuaciones</h2>
-        <p class="gamerScore">Juggador:</p>
-        <p class="pcScores">Computadora:</p>
+        <p class="js-gamer">Jugador:</p>
+        <p class="js-pc">Computadora:</p>
         <button class="js-button">Batalla</button>
-        <button class="js-restart-button hide">Batalla</button>
+        <button class="js-restart-button hide">Reiniciar el juego</button>
     </form>
     <script src="./js/main.js"></script>
 </body>
