--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Los anillos de poder</title>
     <link rel="stylesheet" href="./styles/main.css">
 </head>
-<body>
-    <header>
-        <h1>los anillos de poder</h1>
+<body class="body">
+    <header class="header">
+        <h1 class="h1">los anillos de poder</h1>
     </header>
-    <form>
+    <form class="form">
         <select class="js-select">
             <option value="1">Pelosos</option>
             <option value="2">Sureños buenos</option>
@@ -20,11 +20,11 @@
             <option value="5">Elfos</option>
         </select>
         <p class="js-result">Comienza la batalla</p>
-        <h2>Puntuaciones</h2>
+        <h2 class="h2">Puntuaciones</h2>
         <p class="js-gamer">Jugador:</p>
         <p class="js-pc">Computadora:</p>
-        <button class="js-button">Batalla</button>
-        <button class="js-restart-button hide">Reiniciar el juego</button>
+        <button class="js-button button">Batalla</button>
+        <button class="js-restart-button button hide">Reiniciar el juego</button>
     </form>
     <script src="./js/main.js"></script>
 </body>
